--- a/PiattaSisma/css/style.css
+++ b/PiattaSisma/css/style.css
@@ -16,8 +16,19 @@ a:hover {
 }
 
 #map {
-  width: 100%;
-  height: 100%;
   padding-left: 0px;
   padding-right: 0px;
+}
+
+.our_textbox {
+  font-size: 20px;
+
+}
+
+.our_textbox a {
+  color: lightgrey;
+}
+
+.our_textbox a:hover {
+  color: white;
 }
