--- a/PiattaSisma/css/style.css
+++ b/PiattaSisma/css/style.css
@@ -42,7 +42,7 @@ a:hover {
 }
 
 .round-button-circle {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
 	width: 65px;
@@ -72,4 +72,59 @@ a:hover {
     font-size: 3em;
     font-weight: bold;
     text-decoration: none;
+}
+
+div.gallery {
+    border: 1px solid #ccc;
+    position: relative;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: 50%;
+    max-height: 250px;
+    overflow: hidden;
+}
+
+.desc {
+    background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85));
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
