--- a/PiattaSisma/css/style.css
+++ b/PiattaSisma/css/style.css
@@ -95,9 +95,10 @@ div.gallery img {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: auto;
     text-align: center;
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 * {
